--- a/spark_introduction.ipynb
+++ b/spark_introduction.ipynb
@@ -33,7 +33,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "nqsKMPn0h2nA",
-        "outputId": "13edddf2-1771-47ee-d74f-a3dc6529638f"
+        "outputId": "fde79dec-6579-430d-9d23-72eca42b95fb"
       },
       "outputs": [
         {
@@ -43,13 +43,13 @@
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
             "Collecting pyspark\n",
             "  Downloading pyspark-3.3.0.tar.gz (281.3 MB)\n",
-            "\u001b[K     |████████████████████████████████| 281.3 MB 41 kB/s \n",
+            "\u001b[K     |████████████████████████████████| 281.3 MB 50 kB/s \n",
             "\u001b[?25hCollecting py4j==0.10.9.5\n",
             "  Downloading py4j-0.10.9.5-py2.py3-none-any.whl (199 kB)\n",
-            "\u001b[K     |████████████████████████████████| 199 kB 53.2 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 199 kB 54.2 MB/s \n",
             "\u001b[?25hBuilding wheels for collected packages: pyspark\n",
             "  Building wheel for pyspark (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for pyspark: filename=pyspark-3.3.0-py2.py3-none-any.whl size=281764026 sha256=1bf91aa7f1d1165eec95d5fe8bbe27e1ace825e59de0b9d51fb76c8f0a56310c\n",
+            "  Created wheel for pyspark: filename=pyspark-3.3.0-py2.py3-none-any.whl size=281764026 sha256=36a729147dad32f31a0cae671803bb568977bf973bce0c03e51f47e2d606a14f\n",
             "  Stored in directory: /root/.cache/pip/wheels/7a/8e/1b/f73a52650d2e5f337708d9f6a1750d451a7349a867f928b885\n",
             "Successfully built pyspark\n",
             "Installing collected packages: py4j, pyspark\n",
@@ -82,7 +82,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hkQsPyZbjERt",
-        "outputId": "72f7c696-4b8c-44cf-985a-32fa27330244"
+        "outputId": "4c3c7a27-17be-497f-ad05-7fe1c802a9dd"
       },
       "execution_count": 3,
       "outputs": [
@@ -214,7 +214,7 @@
           "height": 35
         },
         "id": "Ptb10Vjgp6E1",
-        "outputId": "b11ab398-2c40-4406-e34c-7153013f58de"
+        "outputId": "8825f50c-f3b9-4c5b-fb7e-d541d91fd1c4"
       },
       "execution_count": 9,
       "outputs": [
@@ -244,7 +244,7 @@
           "height": 35
         },
         "id": "O4F-I4hxqeMQ",
-        "outputId": "1d94f5d4-6d77-4eab-f1ef-a3b870b34adb"
+        "outputId": "13867e32-0cc2-4887-e1a1-396ae64e29af"
       },
       "execution_count": 10,
       "outputs": [
@@ -273,7 +273,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Eyopwx24qqKK",
-        "outputId": "58586451-a042-4e46-bf38-31a5f7deba1f"
+        "outputId": "1e8b8964-73b9-4deb-dfbd-ad3b4bbf7d37"
       },
       "execution_count": 11,
       "outputs": [
@@ -290,10 +290,170 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Spark does not actually execute the map step unless it needs to.\n",
+        "\n",
+        "RDD in the output refers to resilient distributed dataset.RDDs are exactly what they are - fault tolerant datasets distributed across a cluster. This is how Spark stores data.\n",
+        "\n",
+        "To get spark to actually run the map step, you need to use an 'action'. one available action is the collect method. The collect() method takes the result from all the clusters and \"collects\" them into a single list on the master node."
+      ],
+      "metadata": {
+        "id": "LCi7QAg2bMOB"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "distributed_song_log.map(convert_song_to_lowercase).collect()"
+      ],
+      "metadata": {
+        "id": "hZcI2DJTb9QO",
+        "outputId": "cc5ab3ff-4aa3-4df4-dcb2-1d06252bf70d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['despacito',\n",
+              " 'nice for what',\n",
+              " 'no tears left to cry',\n",
+              " 'despacito',\n",
+              " 'havana',\n",
+              " 'in my feelings',\n",
+              " 'nice for what',\n",
+              " 'despacito',\n",
+              " 'all the stars']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Note as well that spark is not changing the original dataset. Spark is merely making a copy. You can see this by running collect() on original dataset"
+      ],
+      "metadata": {
+        "id": "uf2mWAcscIlo"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "distributed_song_log.collect()"
+      ],
+      "metadata": {
+        "id": "wgpJvVRhcb_G",
+        "outputId": "2c907705-2ee2-4ce5-8a71-002974f6c27f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['Despacito',\n",
+              " 'Nice for what',\n",
+              " 'No tears left to cry',\n",
+              " 'Despacito',\n",
+              " 'Havana',\n",
+              " 'In my feelings',\n",
+              " 'Nice for what',\n",
+              " 'despacito',\n",
+              " 'All the stars']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "You do not always have to write a custom funtion map step. you can use lambda functions as well but Python functions like string.lower().\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "g1yYtfjecgLH"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "distributed_song_log.map(lambda song: song.lower()).collect()"
+      ],
+      "metadata": {
+        "id": "m678pptic78Z",
+        "outputId": "6c35974c-4f7a-4dbe-8d0b-adc5d30bb71a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['despacito',\n",
+              " 'nice for what',\n",
+              " 'no tears left to cry',\n",
+              " 'despacito',\n",
+              " 'havana',\n",
+              " 'in my feelings',\n",
+              " 'nice for what',\n",
+              " 'despacito',\n",
+              " 'all the stars']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "distributed_song_log.map(lambda x : x.lower()).collect"
+      ],
+      "metadata": {
+        "id": "NUTTOUp9daq8",
+        "outputId": "3f37d5b9-91d3-4427-83b8-e95c1182a6ec",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<bound method RDD.collect of PythonRDD[4] at RDD at PythonRDD.scala:53>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 15
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "7d_atDspse3R"
+        "id": "g-T4bAXodupq"
       },
       "execution_count": null,
       "outputs": []
