--- a/Nisha_2211566_Assignment_3_Part2.ipynb
+++ b/Nisha_2211566_Assignment_3_Part2.ipynb
@@ -38,7 +38,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -107,47 +107,50 @@
         }
       ],
       "source": [
-        "!pip install pyspark\n",
-        "!pip install -U -q PyDrive\n",
-        "!apt install openjdk-8-jdk-headless -qq\n",
-        "import os\n",
-        "os.environ[\"JAVA_HOME\"] = \"/usr/lib/jvm/java-8-openjdk-amd64\""
+        "!pip install pyspark #This is usually for local usage or as a client to connect to a cluster instead of setting up a cluster itself.\n",
+        "!pip install -U -q PyDrive #PyDrive is a wrapper library of google-api-python-client that simplifies many common Google Drive API tasks.\n",
+        "!apt install openjdk-8-jdk-headless -qq #software capable of working on a device without a graphical user interface. Such software receives inputs and provides output through other interfaces like network or serial port and is common on servers and embedded devices.\n",
+        "import os #The os module is a part of the standard library, or stdlib, within Python 3. This means that it comes with your Python installation, but you still must import it\n",
+        "os.environ[\"JAVA_HOME\"] = \"/usr/lib/jvm/java-8-openjdk-amd64\" #The path is the most important environment variable of the Java environment which is used to locate the JDK packages that are used to convert the java source code into the machine-readable binary format"
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "import pandas as pd\n",
-        "import numpy as np\n",
-        "import matplotlib.pyplot as plt\n",
+        "import pandas as pd #Pandas is mainly used for data analysis and associated manipulation of tabular data in DataFrames. \n",
+        "import numpy as np #NumPy is a Python library used for working with arrays\n",
+        "import matplotlib.pyplot as plt #Data Vizualization\n",
         "%matplotlib inline\n",
         "\n",
-        "import pyspark\n",
-        "from pyspark.sql import *\n",
-        "from pyspark.sql.types import *\n",
+        "import pyspark # PySpark is the Python API for Apache Spark, an open source, distributed computing framework and set of libraries for real-time, large-scale data processing.\n",
+        "from pyspark.sql import * #Spark SQL is a Spark module for structured data processing. It provides a programming abstraction called DataFrames and can also act as distributed SQL query engine.\n",
+        "from pyspark.sql.types import * #PySpark SQL Types class is a base class of all data types in PuSpark which defined in a package pyspark.sql.types.DataType and they are used to create DataFrame with a specific type\n",
         "from pyspark.sql.functions import *\n",
-        "from pyspark import SparkContext, SparkConf"
+        "from pyspark import SparkContext, SparkConf #A SparkContext represents the connection to a Spark cluster, and can be used to create RDD and broadcast variables on that cluster\n",
+        "#ublic class SparkConf extends java.lang.Object implements scala.Cloneable, Logging. Configuration for a Spark application. "
       ],
       "metadata": {
         "id": "g26ZicKv4hr4"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "# Create a session\n",
-        "conf = SparkConf().set(\"spark.ui.port\",\"4050\")\n",
+        "conf = SparkConf().set(\"spark.ui.port\",\"4050\") #working with the port number\n",
         "\n",
         "#Create the context\n",
         "sc = pyspark.SparkContext(conf=conf)\n",
-        "spark = SparkSession.builder.getOrCreate()"
+        "spark = SparkSession.builder.getOrCreate()\n",
+        "\n",
+        "#This method first checks whether there is a valid global default SparkSession, and if yes, return that one. If no valid global default SparkSession exists, the method creates a new SparkSession and assigns the newly created SparkSession as the global default."
       ],
       "metadata": {
         "id": "lFM5Knp97S-3"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -163,7 +166,7 @@
         "id": "GJuic8ny8BMj",
         "outputId": "718c6948-e1d6-41b1-ffbc-14a5874117b5"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -203,8 +206,8 @@
     {
       "cell_type": "code",
       "source": [
-        "!wget https://bin.equinox.io/c/4VmDzA7iaHb/ngrok-stable-linux-amd64.zip\n",
-        "!unzip ngrok-stable-linux-amd64.zip\n",
+        "!wget https://bin.equinox.io/c/4VmDzA7iaHb/ngrok-stable-linux-amd64.zip #ngrok is the fastest way to put anything on the internet with a single command.\n",
+        "!unzip ngrok-stable-linux-amd64.zip #ngrok is a cross-platform application that enables developers to expose a local development server to the Internet with minimal effort. \n",
         "get_ipython().system_raw('./ngrok http 4050 &')\n",
         "!curl -s http://localhost:4040/api/tunnels | python3 -c \\\n",
         "    \"import sys, json; print(json.load(sys.stdin)['tunnels'][0]['public_url'])\""
@@ -216,7 +219,7 @@
         "id": "KnmiCpDz9Oq-",
         "outputId": "c39a91bf-1e61-4bd3-e7be-c0bb1e4400fe"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -251,7 +254,7 @@
       "metadata": {
         "id": "0LAJ4tME9wzQ"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -279,7 +282,7 @@
         "id": "b1aM_StO-A2I",
         "outputId": "a9288599-7638-4b6f-c617-5326afb640e9"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -333,7 +336,7 @@
       "metadata": {
         "id": "7nFWFlKr_zNG"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -362,7 +365,7 @@
         "id": "lpfb9edJCYpm",
         "outputId": "7355f503-38fb-41be-9b6a-e399003c5ddb"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
