--- a/Nisha_2211566_Assignment_3_Part2.ipynb
+++ b/Nisha_2211566_Assignment_3_Part2.ipynb
@@ -108,9 +108,13 @@
       ],
       "source": [
         "!pip install pyspark #This is usually for local usage or as a client to connect to a cluster instead of setting up a cluster itself.\n",
+        "\n",
         "!pip install -U -q PyDrive #PyDrive is a wrapper library of google-api-python-client that simplifies many common Google Drive API tasks.\n",
+        "\n",
         "!apt install openjdk-8-jdk-headless -qq #software capable of working on a device without a graphical user interface. Such software receives inputs and provides output through other interfaces like network or serial port and is common on servers and embedded devices.\n",
+        "\n",
         "import os #The os module is a part of the standard library, or stdlib, within Python 3. This means that it comes with your Python installation, but you still must import it\n",
+        "\n",
         "os.environ[\"JAVA_HOME\"] = \"/usr/lib/jvm/java-8-openjdk-amd64\" #The path is the most important environment variable of the Java environment which is used to locate the JDK packages that are used to convert the java source code into the machine-readable binary format"
       ]
     },
@@ -248,6 +252,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Importing and loading the breast cancer dataset\n",
         "from sklearn.datasets import load_breast_cancer\n",
         "breast_cancer = load_breast_cancer()"
       ],
@@ -260,7 +265,7 @@
     {
       "cell_type": "code",
       "source": [
-        "pd_df = pd.DataFrame(breast_cancer.data, columns=breast_cancer.feature_names)\n",
+        "pd_df = pd.DataFrame(breast_cancer.data, columns=breast_cancer.feature_names) # Using PySpark, creating the schema from the dataset, and then printing the schema\n",
         "df = spark.createDataFrame(pd_df)\n",
         "\n",
         "def set_df_columns_nullable(spark, df, column_list, nullable=False):\n",
@@ -329,7 +334,9 @@
     {
       "cell_type": "code",
       "source": [
+        "# Importing the linear algebra package from the the Machine Learning module in pyspark\n",
         "from pyspark.ml.linalg import Vectors\n",
+        "# Creating a features dataframe in pyspark and a series for the target class\n",
         "features = spark.createDataFrame(vectors.map(Row),[\"features\"])\n",
         "labels = pd.Series(breast_cancer.target)"
       ],
@@ -349,13 +356,13 @@
         "kmeans = KMeans().setK(2).setSeed(1)\n",
         "model = kmeans.fit(features)\n",
         "\n",
-        "# Making predictions\n",
+        "# Making the predictions\n",
         "predictions = model.transform(features)\n",
         "\n",
-        "# Evaluate clustering by computing Silhouette score\n",
+        "# Evaluate clustering by computing Silhouette score for it\n",
         "evaluator = ClusteringEvaluator()\n",
         "\n",
-        "silhouette = evaluator.evaluate(predictions)\n",
+        "silhouette = evaluator.evaluate(predictions) #The Silhouette is a measure for the validation of the consistency within clusters\n",
         "print(\"Silhouette score with squared eucledian distance: \" + str(silhouette))"
       ],
       "metadata": {
