--- a/Nisha_2211566_Assignment_4.ipynb
+++ b/Nisha_2211566_Assignment_4.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyN5bl4VeR8k5xM3GtfnQeSM",
+      "authorship_tag": "ABX9TyNdmUZEtqIpB2wAP1VHCGiS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -105,7 +105,10 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "fileDownloaded = drive.CreateFile({'id':''})\n",
+        "fileDownloaded.GetContentFile('mini_spark_event_data.json')"
+      ],
       "metadata": {
         "id": "4lDemi1FuG1s"
       },
@@ -142,6 +145,35 @@
     {
       "cell_type": "code",
       "source": [
+        "#create a spark session\n",
+        "spark = SparkSession \\\n",
+        "         .builder \\\n",
+        "         .appName('Nisha_assignment_4') \\\n",
+        "         .getOrCreate()"
+      ],
+      "metadata": {
+        "id": "SNKf4EJXTInv"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#loading the dataset\n",
+        "\n",
+        "df = \"mini_spark_event_data.json\"\n",
+        "df = spark.read.json(df)"
+      ],
+      "metadata": {
+        "id": "z_YMeYFvTmXy"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# Cleaning the Dataset\n",
         "df = df.drop(*['artist','song','firstName', 'lastName', 'id_copy'])             # dropping some irrelevant columns\n",
         "df = df.dropna(how = 'any', subset = ['userId', 'sessionId'])                   # droppping some potential NA values\n",
@@ -150,6 +182,25 @@
       ],
       "metadata": {
         "id": "TVQyMuCFwIPf"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Defining the churn\n",
+        "#These are the customers landing on the cancellation confirmation page\n",
+        "\n",
+        "cancelation = udf(lambda x: 1 if x == \"Cancellation Confirmation\" else 0,\n",
+        "                   IntegerType())\n",
+        "df = df.withColumn(\"churn\", cancelation(\"page\"))\n",
+        "window = Window.partitionBy(\"userId\").rangeBetween(Window.unboundedPreceding,\n",
+        "                                                   Window.unboundedFollowing)\n",
+        "df = df.withColumn(\"churn\", Fsum(\"churn\").over(window))"
+      ],
+      "metadata": {
+        "id": "iJjK39muUAtL"
       },
       "execution_count": null,
       "outputs": []
@@ -224,12 +275,26 @@
     {
       "cell_type": "code",
       "source": [
-        "df = df.withColumn(\"diff_time\",F.datediff(df.last_ts_time, df.ts_time))  # how many days ago was the page visited\n",
+        "df = df.withColumn(\"diff_time\",F.datediff(df.last_ts_time, df.ts_time))\n",
+        "  # how many days ago was the page visited\n",
         "df=df.orderBy([\"userId\", \"ts\"], ascending=[True, True])\n",
+        "\n",
         "df.createOrReplaceTempView('data');                                    # Create a Temp Table to be used for SQL queries"
       ],
       "metadata": {
         "id": "iHzkzrrUzfoP"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Data Preview\n",
+        "df.limit(2).toPandas()"
+      ],
+      "metadata": {
+        "id": "MnS4cBTsYisN"
       },
       "execution_count": null,
       "outputs": []
@@ -359,6 +424,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#Train test split\n",
         "training, test = features.randomSplit([0.8,0.2])"
       ],
       "metadata": {
