--- a/Nisha_2211566_Assignment_4.ipynb
+++ b/Nisha_2211566_Assignment_4.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP6qS122Schb9bTsG/dGTss",
+      "authorship_tag": "ABX9TyOwDS+o6x7Rgz65cj7epjEW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -86,21 +86,36 @@
         }
       ],
       "source": [
-        "!pip install pyspark\n",
-        "!apt install openjdk-8-jdk-headless -qq"
+        "# This is usually for local usage or as a client to connect to a cluster instead of setting up a cluster itself.\n",
+        "\n",
+        "!pip install pyspark \n",
+        "\n",
+        "# software capable of working on a device without a graphical user interface. \n",
+        "# nothing will appear on the screen. Everything is done on the backend side invisible to the user.\n",
+        "!apt install openjdk-8-jdk-headless -qq\n"
       ]
     },
     {
       "cell_type": "code",
       "source": [
+        "#allows us to run a command in the Python script\n",
         "import os\n",
-        "os.environ[\"JAVA_HOME\"] = \"/usr/lib/jvm/java-8-openjdk-amd64\""
+        "os.environ[\"JAVA_HOME\"] = \"/usr/lib/jvm/java-8-openjdk-amd64\" #Setting up the Enviroment"
       ],
       "metadata": {
         "id": "rQTsVIVfzrKx"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "PyDrive is a wrapper library of google-api-python-client that simplifies many common Google Drive API tasks."
+      ],
+      "metadata": {
+        "id": "UeK6Ruzq6VR0"
+      }
     },
     {
       "cell_type": "code",
@@ -110,8 +125,19 @@
       "metadata": {
         "id": "U8hcjeYm0DfT"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Getting the Authentication from my google account to get connnected with it by allowing the options after running that code.\n",
+        "\n",
+        "Getting access to my google drive also"
+      ],
+      "metadata": {
+        "id": "wnBSMB8Y-Xbw"
+      }
     },
     {
       "cell_type": "code",
@@ -129,8 +155,19 @@
       "metadata": {
         "id": "yxTB8pTj0BuK"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Getting the Link of data of json file which is uploaded by me in the GoogleDrive name \"mini_spark_event.json.\n",
+        "\n",
+        "Downloading/Importing the data here from the drive."
+      ],
+      "metadata": {
+        "id": "qy_yefTj6zXP"
+      }
     },
     {
       "cell_type": "code",
@@ -141,35 +178,52 @@
       "metadata": {
         "id": "dJxqQoHJ0TZJ"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "import numpy as np\n",
-        "import pandas as pd\n",
-        "from pyspark.sql import SparkSession\n",
-        "from pyspark.sql.functions import udf\n",
-        "from pyspark.sql import Window\n",
-        "from pyspark.sql import functions as F\n",
-        "from pyspark.sql.functions import sum as Fsum\n",
-        "from pyspark.sql.types import ArrayType, BooleanType, LongType, FloatType, IntegerType\n",
-        "from pyspark.sql.functions import lit, udf, struct, countDistinct, collect_list, avg, count, col\n",
-        "from pyspark.ml.feature import VectorAssembler, Normalizer, StandardScaler\n",
+        "import numpy as np #To work with arrays\n",
+        "import pandas as pd # Working with dataframes and data\n",
+        "from pyspark.sql import SparkSession # Importing the SparkSession which is the entry point to Spark SQL.\n",
+        "from pyspark.sql.functions import udf #PySpark UDF is a User Defined Function that is used to create a reusable function in Spark\n",
+        "from pyspark.sql import Window #PySpark Window functions operate on a group of rows (like frame, partition) and return a single value for every input row.\n",
+        "from pyspark.sql import functions as F #The PySpark SQL functions lit() are used to add a new column to the DataFrame by assigning a literal or constant value\n",
+        "from pyspark.sql.functions import sum as Fsum #In order to calculate cumulative sum of column in pyspark we will be using sum function and partitionBy.\n",
+        "from pyspark.sql.types import ArrayType, BooleanType, LongType, FloatType, IntegerType #Importing data types for pyspark\n",
+        "from pyspark.sql.functions import lit, udf, struct, countDistinct, collect_list, avg, count, col #importing the neccesary functions from pyspark\n",
+        "#VectorAssembler is a transformer that combines a given list of columns into a single vector column.\n",
+        "#Normalizer is a Transformer which transforms a dataset of Vector rows, normalizing each Vector to have unit norm.\n",
+        "#Standardizes features by removing the mean and scaling to unit variance using column summary statistics on the samples in the training set. \n",
+        "from pyspark.ml.feature import VectorAssembler, Normalizer, StandardScaler \n",
+        "#Importing the LogisticRegression,RandomForest and GBD from pyspark\n",
         "from pyspark.ml.classification import LogisticRegression, RandomForestClassifier, GBTClassifier\n",
-        "from pyspark.ml.evaluation import MulticlassClassificationEvaluator, BinaryClassificationEvaluator\n",
-        "from pyspark.ml import Pipeline\n",
-        "import matplotlib.pyplot as plt\n",
-        "from sklearn.metrics import roc_curve\n",
+        "from pyspark.ml.evaluation import MulticlassClassificationEvaluator, BinaryClassificationEvaluator #Importing the classification Evaluator\n",
+        "from pyspark.ml import Pipeline #A Pipeline consists of a sequence of stages, each of which is either an Estimator or a Transformer .\n",
+        "import matplotlib.pyplot as plt #For data Vizualization\n",
+        "from sklearn.metrics import roc_curve # For best Classification\n",
         "from sklearn.metrics import precision_recall_curve\n",
+        "#CrossValidator begins by splitting the dataset into a set of folds which are used as separate training and test datasets.\n",
+        "#Builds and returns all combinations of parameters specified by the param grid.\n",
         "from pyspark.ml.tuning import CrossValidator, ParamGridBuilder"
       ],
       "metadata": {
         "id": "qGJv9txC2Zd2"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Creating a spark session - \n",
+        "\n",
+        "Spark session is a unified entry point of a spark application from Spark 2.0. It provides a way to interact with various spark's functionality with a lesser number of constructs. Instead of having a spark context, hive context, SQL context, now all of it is encapsulated in a Spark session."
+      ],
+      "metadata": {
+        "id": "lAD1Hpwh-pdH"
+      }
     },
     {
       "cell_type": "code",
@@ -183,8 +237,17 @@
       "metadata": {
         "id": "YI15zQNs2cI9"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Loading the JSON file name df"
+      ],
+      "metadata": {
+        "id": "XmBpnDHm_BL5"
+      }
     },
     {
       "cell_type": "code",
@@ -197,8 +260,17 @@
       "metadata": {
         "id": "TIGRclWm3NkL"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Cleaning the json file by using some functions and transformations"
+      ],
+      "metadata": {
+        "id": "V70sisJE_GsG"
+      }
     },
     {
       "cell_type": "code",
@@ -212,8 +284,17 @@
       "metadata": {
         "id": "Mplf5Dga4JeW"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The customers landing on the cancellation confirmation page and summing the churn of all the customers."
+      ],
+      "metadata": {
+        "id": "mz0pOIar_ah3"
+      }
     },
     {
       "cell_type": "code",
@@ -231,8 +312,25 @@
       "metadata": {
         "id": "ELdB4LVQ4UkT"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Some new columns were made in this step to make the data exploration easier,\n",
+        "\n",
+        " the Feature engineering step comes later\n",
+        "\n",
+        " Making the level_shift Column\n",
+        "\n",
+        "This column tells us how many times did the customer switched\n",
+        "\n",
+        "from paid to free service"
+      ],
+      "metadata": {
+        "id": "cyB7cpXY_r69"
+      }
     },
     {
       "cell_type": "code",
@@ -251,7 +349,7 @@
       "metadata": {
         "id": "D06sbq2g4fUz"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -268,7 +366,7 @@
       "metadata": {
         "id": "DIg_edHg4qwM"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -281,7 +379,7 @@
       "metadata": {
         "id": "8x5TlYJB4rxb"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -298,7 +396,7 @@
       "metadata": {
         "id": "NohBJtIq40T_"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -313,8 +411,17 @@
       "metadata": {
         "id": "3XigaK0d4-Vb"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Previewing the data head"
+      ],
+      "metadata": {
+        "id": "B-pQY5OZ__Bu"
+      }
     },
     {
       "cell_type": "code",
@@ -330,7 +437,7 @@
         "id": "4rpzALF-5CNy",
         "outputId": "702707d3-2d7f-45bf-b1e3-7a928cfb6628"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -554,7 +661,7 @@
         "id": "8knrmuUA5Gms",
         "outputId": "8a29a197-1506-4e08-c074-8c32a61f4828"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -589,6 +696,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Printing the Schema"
+      ],
+      "metadata": {
+        "id": "ay8Y3aZ5AFSq"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "df.printSchema();"
@@ -600,7 +716,7 @@
         "id": "BR4zXxn65PUK",
         "outputId": "48a28af0-50de-41a8-a074-ebd7ee54678a"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -698,7 +814,7 @@
         "id": "0_2I2HQM5Z1F",
         "outputId": "f9ae213b-8d82-4550-e08f-96bd118793b3"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -909,7 +1025,7 @@
       "metadata": {
         "id": "mhk15VE25g7a"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -921,7 +1037,7 @@
       "metadata": {
         "id": "YkOPCvl45j2q"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -938,7 +1054,7 @@
       "metadata": {
         "id": "xB8agHcS5uqR"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -950,7 +1066,7 @@
       "metadata": {
         "id": "mkwMyZ2i5ynx"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -963,7 +1079,7 @@
       "metadata": {
         "id": "_1lCFAkV54ei"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -986,7 +1102,7 @@
       "metadata": {
         "id": "X38F-COD59Dp"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1005,7 +1121,7 @@
       "metadata": {
         "id": "HwRrLF6c6ClJ"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1016,8 +1132,17 @@
       "metadata": {
         "id": "Zbp2Ki4D6J75"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Validation happening"
+      ],
+      "metadata": {
+        "id": "oKj1lJ34AQYc"
+      }
     },
     {
       "cell_type": "code",
@@ -1031,8 +1156,17 @@
       "metadata": {
         "id": "UUxeadcW6M85"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Model Fitting"
+      ],
+      "metadata": {
+        "id": "6fY3LFjEAOb9"
+      }
     },
     {
       "cell_type": "code",
@@ -1042,8 +1176,17 @@
       "metadata": {
         "id": "J-cwa8Lx6Uzb"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Evaluation score"
+      ],
+      "metadata": {
+        "id": "k5oBQ3LiAdJP"
+      }
     },
     {
       "cell_type": "code",
@@ -1057,7 +1200,7 @@
         "id": "MaK_XQ4e6eRz",
         "outputId": "06890d0c-9b09-439c-88a2-97aef91b3ce4"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1090,7 +1233,7 @@
       "metadata": {
         "id": "tElAKUE_7_Qv"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1101,7 +1244,7 @@
       "metadata": {
         "id": "uU6EfVUj8B7x"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1116,8 +1259,17 @@
       "metadata": {
         "id": "3lHnYC1q8GPu"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Model Fitting"
+      ],
+      "metadata": {
+        "id": "JLKbDHzTAW58"
+      }
     },
     {
       "cell_type": "code",
@@ -1127,8 +1279,17 @@
       "metadata": {
         "id": "u9vjYyL48KbI"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Evaluation score"
+      ],
+      "metadata": {
+        "id": "eFlzeElhAZfk"
+      }
     },
     {
       "cell_type": "code",
@@ -1142,7 +1303,7 @@
         "id": "5twCx-9r8MRP",
         "outputId": "8a7d5380-0f56-4ac2-af0c-45ece377ce83"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1173,7 +1334,7 @@
       "metadata": {
         "id": "HAeQ2Z6I8Vc-"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1184,7 +1345,7 @@
       "metadata": {
         "id": "zlTLGbmH8x0H"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1199,8 +1360,17 @@
       "metadata": {
         "id": "soe0poe98h_O"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Model Fitting"
+      ],
+      "metadata": {
+        "id": "xTVR1JMBAiAM"
+      }
     },
     {
       "cell_type": "code",
@@ -1210,8 +1380,17 @@
       "metadata": {
         "id": "1UUT8ciF88a3"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Evaluation score"
+      ],
+      "metadata": {
+        "id": "oumFJuElAnxD"
+      }
     },
     {
       "cell_type": "code",
@@ -1225,7 +1404,7 @@
         "id": "XwSAX0wD9DRG",
         "outputId": "fe6c06e9-ebe2-44a2-da4d-6c291ee80fe8"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1247,8 +1426,17 @@
       "metadata": {
         "id": "4N53DnUw9IDu"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Vizualizing the ROC curve"
+      ],
+      "metadata": {
+        "id": "MYRQE2bFAv-L"
+      }
     },
     {
       "cell_type": "code",
@@ -1276,7 +1464,7 @@
         "id": "rjj9MEa59a93",
         "outputId": "63dd08a2-859c-447c-db70-4612b9c04754"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
